--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -594,8 +594,23 @@
     "adblockerIssue": {
         "message": "It seems that something is blocking SponsorBlock's ability to get video data. This is probably your ad blocker. Please check https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
     },
+    "youtubePermissionRequest": {
+        "message": "It seems that SponsorBlock is unable to reach the YouTube API. To fix this, accept the permission prompt that will appear next, wait a few seconds, and then reload the page."
+    },
+    "acceptPermission": {
+        "message": "Accept permission"
+    },
+    "permissionRequestSuccess": {
+        "message": "Permission success succeeded!"
+    },
+    "permissionRequestFailed": {
+        "message": "Permission request failed, did you click deny?"
+    },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "If you are unable to resolve this, then disable the setting 'Ignore unlisted/private videos', as SponsorBlock is unable to retrieve the visibility information for this video"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "If you are unable to resolve this, then disable the setting 'Force Channel Check Before Skipping', as SponsorBlock is unable to retrieve the visibility information for this video"
     },
     "itCouldBeAdblockerIssue": {
         "message": "If this keeps occuring, it could be caused by your ad blocker. Please check https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
