Add submitting for highlight category

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -335,9 +335,6 @@
     "createdBy": {
         "message": "Created By"
     },
-    "autoSkip": {
-        "message": "Auto Skip"
-    },
     "showSkipNotice": {
         "message": "Show Notice After A Segment Is Skipped"
     },
@@ -534,19 +531,37 @@
     "category_music_offtopic_short": {
         "message": "Non-Music"
     },
+    "category_highlight": {
+        "message": "Highlight"
+    },
+    "category_highlight_description": {
+        "message": "The part of the video that most people are looking for. Similar to \"Video starts at x\" comments."
+    },
     "category_livestream_messages": {
         "message": "Livestream: Donation/Message Readings"
     },
     "category_livestream_messages_short": {
         "message": "Message Reading"
     },
-    "disable": {
-        "message": "Disable"
+    "autoSkip": {
+        "message": "Auto Skip"
     },
     "manualSkip": {
         "message": "Manual Skip"
     },
     "showOverlay": {
+        "message": "Show In Seek Bar"
+    },
+    "disable": {
+        "message": "Disable"
+    },
+    "autoSkip_POI": {
+        "message": "Auto skip to the start"
+    },
+    "manualSkip_POI": {
+        "message": "Ask when video loads"
+    },
+    "showOverlay_POI": {
         "message": "Show In Seek Bar"
     },
     "colorFormatIncorrect": {
