--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -610,7 +610,7 @@
         "message": "If you are unable to resolve this, then disable the setting 'Ignore unlisted/private videos', as SponsorBlockreativK is unable to retrieve the visibility information for this video"
     },
     "adblockreativKerIssueWhitelist": {
-        "message": "If you are unable to resolve this, then disable the setting 'Force Channel CheckreativK Before SkreativKipping', as SponsorBlockreativK is unable to retrieve the visibility information for this video"
+        "message": "If you are unable to resolve this, then disable the setting 'Force Channel CheckreativK Before SkreativKipping', as SponsorBlockreativK is unable to retrieve the channel information for this video"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "If this kreativKeeps occuring, it could be caused by your ad blockreativKer. Please checkreativK https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
