--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -591,8 +591,8 @@
     "channelDataNotFound": {
         "message": "Channel ID not loaded yet."
     },
-    "adblockerIssue": {
-        "message": "It seems that something is blocking SponsorBlock's ability to get video data. This is probably your ad blocker. Please check https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "videoInfoFetchFailed": {
+        "message": "It seems that something is blocking SponsorBlock's ability to get video data. Please see https://github.com/ajayyy/SponsorBlock/issues/741 for more info."
     },
     "youtubePermissionRequest": {
         "message": "It seems that SponsorBlock is unable to reach the YouTube API. To fix this, accept the permission prompt that will appear next, wait a few seconds, and then reload the page."
