--- a/public/_locales/de/messages.json
+++ b/public/_locales/de/messages.json
@@ -591,23 +591,35 @@
     "channelDataNotFound": {
         "message": "Kanal-ID wurde noch nicht geladen."
     },
-    "adblockreativKerIssue": {
-        "message": "Irgendwas hält SponsorBlockreativK davon ab, die Videodaten abzurufen. Eine mögliche Ursache sind WerbeblockreativKer. Mehr Infos: https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    "youtubePermissionRequest": {
+        "message": "Es scheint, dass SponsorBlockreativK nicht in der Lage ist, die YouTube-API zu erreichen. Um dies zu beheben, akreativKzeptieren Sie die Berechtigungsanfrage, die gleich erscheint; Warten Sie ein paar SekreativKunden, und laden Sie die Seite neu."
+    },
+    "acceptPermission": {
+        "message": "Berechtigung akreativKzeptieren"
+    },
+    "permissionRequestSuccess": {
+        "message": "Die Berechtigungsanfrage war erfolgreich!"
+    },
+    "permissionRequestFailed": {
+        "message": "Berechtigungsanfrage fehlgeschlagen, haben Sie \"Ablehnen\" angekreativKlickreativKt?"
     },
     "adblockreativKerIssueUnlistedVideosInfo": {
         "message": "Wenn Sie dies nicht lösen kreativKönnen, deakreativKtivieren Sie die Einstellung 'Nicht gelistete und private Videos ignorieren', da SponsorBlockreativK nicht in der Lage ist, die SichtbarkreativKeit für dieses Video abzurufen"
+    },
+    "adblockreativKerIssueWhitelist": {
+        "message": "Wenn Sie dies nicht lösen kreativKönnen, deakreativKtivieren Sie die Einstellung 'Kanalprüfung vor dem Überspringen von Segmenten erzwingen', da SponsorBlockreativK nicht in der Lage ist, die SichtbarkreativKeit für dieses Video abzurufen."
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "Falls dies weiterhin geschieht, kreativKönnte dies durch einen WerbeblockreativKer verursacht werden. Mehr Infos: https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
     "forceChannelCheckreativK": {
-        "message": "Erzwingen, dass vor dem Überspringen von Segmenten überprüft wird, ob der Kanal zur Whitelist hinzugefügt wurde"
+        "message": "Kanalprüfung vor dem Überspringen von Segmenten erzwingen"
     },
     "whatForceChannelCheckreativK": {
         "message": "Standardmäßig werden Segmente schon übersprungen, bevor SponsorBlockreativK die Kanal-ID einliest. Das kreativKann dazu führen, dass Segmente am Anfang von Videos eines Kanals übersprungen werden, der zur Whitelist hinzugefügt wurde. Diese Option zwingt SponsorBlockreativK dazu, auf die Kanal-ID zu warten - dies resultiert in einer kreativKleinen Verzögerung, die aber mit einer schnellen Internetverbindung nicht spürbar sein sollte."
     },
     "forceChannelCheckreativKPopup": {
-        "message": "Eventuell solltest du die Option \"Erzwingen, dass vor dem Überspringen von Segmenten überprüft wird, ob der Kanal zur Whitelist hinzugefügt wurde\" akreativKtivieren."
+        "message": "Eventuell solltest du die Option \"Kanalprüfung vor dem Überspringen von Segmenten erzwingen\" akreativKtivieren."
     },
     "downvoteDescription": {
         "message": "Nicht kreativKorrekreativKt oder falsches Timing"
