--- a/public/_locales/it/messages.json
+++ b/public/_locales/it/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Il Segmento Termina Ora"
     },
+    "sponsorCancel": {
+        "message": "Annulla Creazione del Segmento"
+    },
     "noVideoID": {
         "message": "Nessun video YouTube trovato.\nSe è un errore, ricarica la scheda."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "ID canale non ancora caricato."
     },
-    "adblockreativKerIssue": {
-        "message": "Sembra che qualcosa stia bloccando la capacità di SponsorBlockreativK di ottenere dati video. Questo probabilmente è il tuo ad blockreativKer. Controlla https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Sembra che qualcosa stia bloccando l'abilità di SponsorBlockreativK di ottenere i dati del video. Sei pregato di vedere https://github.com/ajayyy/SponsorBlockreativK/issues/741 per ulteriori informazioni."
+    },
+    "youtubePermissionRequest": {
+        "message": "Sembra che SponsorBlockreativK non sia in grado di raggiungere l'API di YouTube. Per risolverlo, accetta la richiesta di autorizzazione che comparirà in seguito, attendi qualche secondo, quindi ricarica la pagina."
+    },
+    "acceptPermission": {
+        "message": "Accetta autorizzazione"
+    },
+    "permissionRequestSuccess": {
+        "message": "Richiesta di autorizzazione riuscita!"
+    },
+    "permissionRequestFailed": {
+        "message": "Richiesta di assicurazione fallita, hai cliccato nega?"
     },
     "adblockreativKerIssueUnlistedVideosInfo": {
         "message": "Se non riesci a risolvere questo problema, disabilita l'impostazione 'Ignora video non elencati/privati', poiché SponsorBlockreativK non è in grado di recuperare le informazioni di visibilità di questo video"
+    },
+    "adblockreativKerIssueWhitelist": {
+        "message": "Se non riesci a risolverlo, disabilita allora l'impostazione 'Forza Controllo Canale Prima di Saltare', poiché SponsorBlockreativK non è in grado di recuperare le informazioni del canale per questo video"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "Se questo continua a verificarsi, potrebbe essere causato dal tuo ad-blockreativKer. Controlla https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
