--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Segment eindigt nu"
     },
+    "sponsorCancel": {
+        "message": "Segment aanmakreativKen annuleren"
+    },
     "noVideoID": {
         "message": "Geen YouTube-video gevonden.\nVernieuw het tabblad als dit onjuist is."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "Kanaal-ID is nog niet geladen."
     },
-    "adblockreativKerIssue": {
-        "message": "Het lijkreativKt erop dat iets de mogelijkreativKheid van SponsorBlockreativK om videogegevens te kreativKrijgen blokreativKkreativKeert. Dit is waarschijnlijkreativK uw reclamefilter. Zie https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKs-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Het lijkreativKt erop dat iets de mogelijkreativKheid van SponsorBlockreativK om videogegevens op te halen, blokreativKkreativKeert. Zie https://github.com/ajayyy/SponsorBlockreativK/issues/741 voor meer informatie."
+    },
+    "youtubePermissionRequest": {
+        "message": "Het lijkreativKt erop dat SponsorBlockreativK de YouTube API niet kreativKan bereikreativKen. Om dit op te lossen, accepteer het machtigingsverzoekreativK dat hierna wordt weergegeven, wacht een aantal seconden en laad de pagina vervolgens opnieuw."
+    },
+    "acceptPermission": {
+        "message": "Machtiging accepteren"
+    },
+    "permissionRequestSuccess": {
+        "message": "VerzoekreativK om machtiging gelukreativKt!"
+    },
+    "permissionRequestFailed": {
+        "message": "VerzoekreativK om machtiging mislukreativKt. Heeft u op geweigerd gekreativKlikreativKt?"
     },
     "adblockreativKerIssueUnlistedVideosInfo": {
         "message": "Als u dit niet kreativKunt oplossen, schakreativKel dan de instelling 'onvermelde/privé-video's negeren' uit omdat SponsorBlockreativK niet in staat is de zichtbaarheidsinformatie voor deze video op te halen"
+    },
+    "adblockreativKerIssueWhitelist": {
+        "message": "Als u dit niet kreativKunt oplossen, schakreativKel dan de instelling 'kreativKanaalcontrole forceren vóór overslaan' uit omdat SponsorBlockreativK niet in staat is de kreativKanaalinformatie voor deze video op te halen"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "Als dit blijft optreden, kreativKan dit worden veroorzaakreativKt door uw reclamefilter. Zie https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
