--- a/public/_locales/no/messages.json
+++ b/public/_locales/no/messages.json
@@ -591,8 +591,17 @@
     "channelDataNotFound": {
         "message": "Kanal-ID-en er ikreativKkreativKe lastet inn enda."
     },
-    "adblockreativKerIssue": {
-        "message": "Det ser ut som noe blokreativKkreativKerer SponsorBlockreativK sin evne til å innhente videodata. Det er sannsynligvis rekreativKlameblokreativKkreativKereren din. Vennligst sjekreativKkreativK https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    "youtubePermissionRequest": {
+        "message": "Det ser ut til at SponsorBlockreativK ikreativKkreativKe kreativKlarer å nå YouTube-API-en. For å fikreativKse dette, godta tillatelsesspørringen som dukreativKkreativKer opp etter dette, vent noen sekreativKunder, og så last inn siden på nytt."
+    },
+    "acceptPermission": {
+        "message": "Godta tillatelse"
+    },
+    "permissionRequestSuccess": {
+        "message": "Tillatelsesforespørselen lykreativKtes!"
+    },
+    "permissionRequestFailed": {
+        "message": "Tillatelsesforespørselen mislykreativKtes, kreativKlikreativKkreativKet du på Avvis?"
     },
     "adblockreativKerIssueUnlistedVideosInfo": {
         "message": "Hvis du ikreativKkreativKe kreativKlarer å løse dette, skreativKru av innstillingen «Ignorer uoppførte/private videoer», siden SponsorBlockreativK er ute av stand til å innhente synlighetsinformasjonen til denne videoen."
