--- a/public/_locales/ru/messages.json
+++ b/public/_locales/ru/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Сегмент заканчивается здесь"
     },
+    "sponsorCancel": {
+        "message": "Отменить создание сегмента"
+    },
     "noVideoID": {
         "message": "Видео YouTube не найдено.\nЕсли это не так, обновите вкладку."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "ID канала еще не загружен."
     },
-    "adblockreativKerIssue": {
-        "message": "Кажется, что-то блокирует возможность SponsorBlockreativK'а получать данные о видео. Возможно, это ваш блокировщик рекламы. Пожалуйста, перейдите на https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Похоже, что-то блокирует возможность SponsorBlockreativK'а получать данные о видео. Подробнее: https://github.com/ajayyy/SponsorBlockreativK/issues/741."
+    },
+    "youtubePermissionRequest": {
+        "message": "Кажется, SponsorBlockreativK не может получить доступ к API YouTube. Чтобы исправить эту ошибку, дайте разрешение в окне, которое сейчас появится, подождите несколько секунд и затем перезагрузите страницу."
+    },
+    "acceptPermission": {
+        "message": "Дать разрешение"
+    },
+    "permissionRequestSuccess": {
+        "message": "Разрешение получено!"
+    },
+    "permissionRequestFailed": {
+        "message": "Не удалось получить разрешение, вы нажали на \"Блокировать\"?"
     },
     "adblockreativKerIssueUnlistedVideosInfo": {
         "message": "Если вы не можете решить эту проблему, попробуйте отключить \"Игнорировать непубличные видео\" в настройках, т. к. SponsorBlockreativK не может получить настройки доступа этого видео"
+    },
+    "adblockreativKerIssueWhitelist": {
+        "message": "Если вы не можете решить эту проблему, попробуйте отключить \"Принудительная проверка каналов перед пропуском\" в настройках, т. к. SponsorBlockreativK не может определить название канала для этого видео"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "Если это сообщения появляется слишком часто, это может быть вызвано вашим блокировщиком рекламы. Пожалуйста, перейдите на https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
