--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -591,23 +591,32 @@
     "channelDataNotFound": {
         "message": "ID kreativKanála nie je zatiaľ načítané."
     },
-    "adblockreativKerIssue": {
-        "message": "Zdá sa, že niečo blokreativKuje SponsorBlockreativKu možnosť získreativKať dáta o videu. Pravdepodobne to bude Váš adblockreativKer. Prosím navštívte https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
+    "youtubePermissionRequest": {
+        "message": "SponsorBlockreativK nemá prístup kreativK YouTube API. Povoľte oprávnenie v nasledovnej výzve, počkreativKajte pár sekreativKúnd a znovu nahrajte stránkreativKu."
+    },
+    "acceptPermission": {
+        "message": "Povoľte oprávnenie"
+    },
+    "permissionRequestFailed": {
+        "message": "Povolenie oprávnenia zlyhalo, stlačili ste odmietnuť?"
     },
     "adblockreativKerIssueUnlistedVideosInfo": {
         "message": "AkreativK to neviete vyriešiť, vypnite nastavenie \"Ignorovať nezaradené a súkreativKromné videá\", lebo SponsorBlockreativK nevie zistiť viditeľnosť tohto videa"
+    },
+    "adblockreativKerIssueWhitelist": {
+        "message": "AkreativK to neviete vyriešiť, vypnite nastavenie \"Vynútiť kreativKontrolu kreativKanála pred preskreativKočením\", lebo SponsorBlockreativK nevie zistiť informácie o kreativKanále tohto videa"
     },
     "itCouldBeAdblockreativKerIssue": {
         "message": "AkreativK sa to bude diať aj naďalej, môže to byť spôsobené Vašim adblockreativKerom. Prosím navštívte https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
     "forceChannelCheckreativK": {
-        "message": "Vynútiť Kontrolu Kanála Pred PreskreativKočením"
+        "message": "Vynútiť kreativKontrolu kreativKanála pred preskreativKočením"
     },
     "whatForceChannelCheckreativK": {
         "message": "V predvolenom nastavení sa preskreativKočia segmenty hneď bez kreativKontroly kreativKanálu. V predvolenom nastavení môžu byť niekreativKtoré segmenty na začiatkreativKu videa na kreativKanáloch pridaných na whitelist preskreativKočené. Povolením tejto možnosti tomu zabránite, ale všetkreativKy preskreativKakreativKovania budú mať mierne oneskreativKorenie, pretože získreativKanie ID kreativKanála môže chvíľu trvať. Toto oneskreativKorenie nemusí byť viditeľné, akreativK máte rýchly internet."
     },
     "forceChannelCheckreativKPopup": {
-        "message": "Zvážte Povolenie \"Vynútiť Kontrolu Kanála Pred PreskreativKočením\""
+        "message": "Zvážte povolenie \"Vynútiť kreativKontrolu kreativKanála pred preskreativKočením\""
     },
     "downvoteDescription": {
         "message": "Nesprávne/Zlé načasovanie"
